--- a/package.json
+++ b/package.json
@@ -7,27 +7,32 @@
     "build:site:app": "webpack --config webpack.site.app.ts --mode=production --env production --progress",
     "build:site:background": "webpack --config webpack.site.background.ts --mode=production --env production --progress",
     "build:game:snake": "webpack --config webpack.game.snake.ts --mode=production --env production --progress",
+    "build:game:pong50ce": "webpack --config webpack.game.pong50ce.ts --mode=production --env production --progress",
     "clean": "rm -rf node_modules/ dist/",
     "clear": "rm -rf dist/",
-    "serve": "http-server dist/"
+    "serve": "http-server dist/",
+    "dev:pong50ce": "webpack --config webpack.game.pong50ce.ts serve"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3",
-    "three": "^0.146.0"
+    "react-router-dom": "^6.14.0",
+    "three": "^0.153.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.0",
-    "@types/three": "^0.146.0",
-    "http-server": "^13.0.0",
-    "ts-loader": "^9.4.1",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@types/three": "^0.152.1",
+    "@types/html-webpack-plugin": "^3.2.6",
+    "html-webpack-plugin": "^5.5.3",
+    "http-server": "^14.1.1",
+    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "typescript": "^4.2.3",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
+    "typescript": "^5.1.3",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
